删除无用注释 修复物品材质&&注册名 完善喝茶逻辑 修复竹蜻蜓模型（未完成

--- a/src/main/resources/assets/propsofdoraemon/lang/zh_cn.json
+++ b/src/main/resources/assets/propsofdoraemon/lang/zh_cn.json
@@ -1,3 +1,5 @@
 {
-  "item.propsofdoraemon.bamboo_copter": "竹蜻蜓"
+  "item.propsofdoraemon.bamboo_copter": "竹蜻蜓",
+  "item.propsofdoraemon.filled_teapot": "冒险茶",
+  "item.propsofdoraemon.empty_teapot": "空茶杯"
 }
