--- a/src/main/resources/assets/propsofdoraemon/lang/en_us.json
+++ b/src/main/resources/assets/propsofdoraemon/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.propsofdoraemon.bamboo_copter": "Bamboo Copter"
+  "item.propsofdoraemon.bamboo_copter": "Bamboo Copter",
+  "item.propsofdoraemon.filled_teapot": "Adventure Tea",
+  "item.propsofdoraemon.empty_teapot": "Empty Teapot"
 }
