改变了竹蜻蜓材质 将ItemFilledTeapot改为AdventureTea

--- a/src/main/resources/assets/propsofdoraemon/lang/en_us.json
+++ b/src/main/resources/assets/propsofdoraemon/lang/en_us.json
@@ -1,5 +1,5 @@
 {
   "item.propsofdoraemon.bamboo_copter": "Bamboo Copter",
-  "item.propsofdoraemon.filled_teapot": "Adventure Tea",
+  "item.propsofdoraemon.adventure_tea": "Adventure Tea",
   "item.propsofdoraemon.empty_teapot": "Empty Teapot"
 }
