--- a/src/main/resources/assets/propsofdoraemon/lang/zh_cn.json
+++ b/src/main/resources/assets/propsofdoraemon/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
   "item.propsofdoraemon.bamboo_copter": "竹蜻蜓",
-  "item.propsofdoraemon.filled_teapot": "冒险茶",
+  "item.propsofdoraemon.adventure_tea": "冒险茶",
   "item.propsofdoraemon.empty_teapot": "空茶杯"
 }
