写注释，优化代码

--- a/src/main/resources/assets/propsofdoraemon/lang/en_us.json
+++ b/src/main/resources/assets/propsofdoraemon/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.propsofdoraemon.bamboo_copter": "Bamboo Copter",
   "item.propsofdoraemon.adventure_tea": "Adventure Tea",
-  "item.propsofdoraemon.empty_teapot": "Empty Teapot"
+  "item.propsofdoraemon.empty_teapot": "Empty Teapot",
+  "item.prosofdoraemon.help_ball": "Help Ball"
 }
