--- a/src/main/resources/assets/propsofdoraemon/lang/zh_cn.json
+++ b/src/main/resources/assets/propsofdoraemon/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "item.propsofdoraemon.bamboo_copter": "竹蜻蜓",
   "item.propsofdoraemon.adventure_tea": "冒险茶",
-  "item.propsofdoraemon.empty_teapot": "空茶杯"
+  "item.propsofdoraemon.empty_teapot": "空茶杯",
+  "item.propsofdoraemon.help_ball": "救命丸子"
 }
